fixed weird gap between background color of album and edge

--- a/css/darcy-style.scss
+++ b/css/darcy-style.scss
@@ -222,11 +222,11 @@ body {
 
 
 #last-listened {
-        &.glyphicon {
-            vertical-align: middle;
-            padding: 0 10px;
-            font-size: 40px;
-        }
+    &.glyphicon {
+        vertical-align: middle;
+        padding: 0 10px;
+        font-size: 40px;
+    }
 
     vertical-align: top;
 }
@@ -318,16 +318,24 @@ body {
 
         .album-info-wrapper {
             background-color: rgba(255,255,255,0.8);
-            display: table;
             padding: 0;
             margin:0;
 
             .album-info {
-                display: table-cell;
-                vertical-align: middle;
-                text-align: center;
-                padding:0;
-                font-family: 'Comfortaa', cursive;
+                display: table;
+                position: absolute;
+                width: 100%;
+                height: 100%;
+                top:0;
+                left:0;
+                padding: 0;
+                .album-info-text {
+                    display: table-cell;
+                    vertical-align: middle;
+                    text-align: center;
+                    padding:0;
+                    font-family: 'Comfortaa', cursive;
+                }
             }
         }
     }
